[package]
name = "decart"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "Rust library for reading and generating Octo cartridges"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gif = "0.11"
thiserror = "1.0"
octopt = "0.0.9"

[dev-dependencies]
assert-json-diff = "2.0"
clap = "2.33"
colored_json = "2"

[[example]]
name = "decart"
