[package]
name = "decart"
version = "0.0.6"
edition = "2021"
license = "MIT"
description = "Rust library for reading and generating Octo cartridges"
repository = "https://github.com/tobiasvl/decart"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gif = "0.11"
thiserror = "1.0"
octopt = "0.1"

[dev-dependencies]
assert-json-diff = "2.0"
clap = "2.33"
colored_json = "2"
syntect = "4.6"
atty = "0.2.14"

[[example]]
name = "decart"
