[package]
name = "decart"
version = "0.0.9"
authors = ["Tobias V. Langhoff <tobias@langhoff.no>"]
edition = "2021"
license = "MIT"
description = "Octo cartridge encoder/decoder"
repository = "https://github.com/tobiasvl/decart"
categories = ["encoding", "command-line-utilities"]
documentation = "https://docs.rs/decart"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gif = "0.11"
thiserror = "1.0"
octopt = "0.1"

[dev-dependencies]
assert-json-diff = "2.0"
clap = { version = "3.2", features = ["cargo"] }
colored_json = "2"
syntect = "5"
atty = "0.2.14"

[[example]]
name = "decart"
